deploy/kubernetes/manifests/netpol-rabbitmq-access.yaml
---
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: rabbitmq-access
  namespace: default
spec:
  podSelector:
    matchLabels:
      name: rabbitmq
  ingress:
    - from:
        - podSelector:
            matchLabels:
              name: shipping
        - podSelector:
            matchLabels:
              name: queue-master
      ports:
        - protocol: TCP
          port: 5672
